--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,7 @@ services:
   db:
     image: postgres
     restart: always
+    environment:
+      - POSTGRES_USER=grind
+      - POSTGRES_PASSWORD=grind
+      - POSTGRES_DB=grind
