--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,5 @@ services:
       - POSTGRES_USER=grind
       - POSTGRES_PASSWORD=grind
       - POSTGRES_DB=grind
+    ports: 
+     - "5432:5432"
