--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,11 @@ services:
     build: .
     command: python src/manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/source # ensure changes made in the sourcecode are reflected in the container without rebuilding it
+      - .:/code # ensure changes made in the sourcecode are reflected in the container without rebuilding it
     ports:
-      - "8080:8000"
+      - "8000:8000"
     depends_on:
       - db
-    container_name: grind_app
-    environment:
-      DJANGO_SETTINGS_MODULE: grind.settings.base
   db:
     image: postgres
     restart: always
@@ -22,4 +19,3 @@ services:
       - POSTGRES_DB=grind
     ports: 
      - "5432:5432"
-    container_name: grind_db
