--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
+atomicwrites==1.3.0
+attrs==19.3.0
+certifi==2019.9.11
+chardet==3.0.4
+coverage==4.5.4
+coveralls==1.8.2
 Django==2.2.4
 djangorestframework==3.10.2
+docopt==0.6.2
+idna==2.8
 importlib-metadata==0.22
+more-itertools==7.2.0
 packaging==19.1
 pluggy==0.13.0
 psycopg2==2.8.3
 py==1.8.0
+PyJWT==1.7.1
 pyparsing==2.4.2
 pytest==5.1.2
+pytest-cov==2.7.1
 pytest-django==3.5.1
 pytz==2019.2
+requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.6
 wcwidth==0.1.7
 zipp==0.6.0
-coverage==4.5.4
-coveralls==1.8.2 
-pytest-cov==2.7.1
