- add user creation post_save signals - add retrieve profile - add update user/profile - Send account activation email - activate user - fix regitser user - delete user

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ jobs:
             ./cc-test-reporter before-build
             mkdir test-reports
             PYTHONPATH=src coverage run --source=api -m pytest
-            coverage report
-            coverage html
+            # coverage report
+            # coverage html
       # - store_test_results:
       #     path: test-reports
       - store_artifacts:
