--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,51 @@
 atomicwrites==1.3.0
 attrs==19.3.0
+autopep8==1.4.4
+cachetools==3.1.1
 certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 coverage==4.5.4
 coveralls==1.8.2
+cryptography==2.8
+defusedxml==0.6.0
 Django==2.2.4
+django-braces==1.13.0
+django-extensions==2.2.5
+django-oauth-toolkit==1.2.0
 djangorestframework==3.10.2
 docopt==0.6.2
+facebook-sdk==3.1.0
+future==0.18.2
+google-auth==1.7.1
 idna==2.8
 importlib-metadata==0.22
 more-itertools==7.2.0
+oauthlib==3.1.0
 packaging==19.1
 pluggy==0.13.0
 psycopg2==2.8.3
 py==1.8.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.7
+pycodestyle==2.5.0
+pycparser==2.19
 PyJWT==1.7.1
+pyOpenSSL==19.0.0
 pyparsing==2.4.2
 pytest==5.1.2
 pytest-cov==2.7.1
 pytest-django==3.5.1
+python-twitter==3.5
+python3-openid==3.1.0
 pytz==2019.2
 requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
 six==1.12.0
+social-auth-core==3.2.0
 sqlparse==0.3.0
 urllib3==1.25.6
 wcwidth==0.1.7
+Werkzeug==0.16.0
 zipp==0.6.0
