--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
 coverage==4.5.4
-coveralls==1.8.2
 cryptography==2.8
 defusedxml==0.6.0
 Django==2.2.8
@@ -49,3 +48,5 @@ urllib3==1.25.6
 wcwidth==0.1.7
 Werkzeug==0.16.0
 zipp==0.6.0
+gunicorn==20.0.4
+whitenoise==5.0.1
