--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -2,5 +2,4 @@
 ; django_find_project = False
 DJANGO_SETTINGS_MODULE=grind.settings.test
 python_files==tests*.py test*.py
-; addopts =  -p no:warnings --nomigrations --cov=. --cov-report=html
-addopts = --nomigrations --cov=. --cov-report=html
+addopts = -p no:warnings --nomigrations --cov=. --cov-report=html
