--- a/.coveragerc
+++ b/.coveragerc
@@ -1,15 +1,15 @@
 [run]
 omit =
-  src/api/apps.py,
-  src/api/admin.py,
-  src/api/authentication/*,
-  src/api/helpers/*
-  src/api/models/user_manager.py,
-  src/api/migrations/*,
-  src/grind/settings/*,
-  src/api/tests/*,
-  src/api/urls.py,
-  src/grind/wsgi.py,
-  src/manage.py,
-  src/setup.py,
-  src/api/test_runner.py
+  api/apps.py,
+  api/admin.py,
+  api/authentication/*,
+  api/helpers/*
+  api/models/user_manager.py,
+  api/migrations/*,
+  grind/settings/*,
+  api/tests/*,
+  api/urls.py,
+  grind/wsgi.py,
+  manage.py,
+  setup.py,
+  api/test_runner.py
